# Rust-Operating-System-Codes

barest/.cargo/: config
barest/src/: cursor.rs  main.rs
os_with_bootloader/: build.rs
os_with_bootloader/kernel_with_bootloader/: Cargo.toml
os_with_bootloader/kernel_with_bootloader/src/: main.rs  writer.rs
