[package]
name = "kernel_with_bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.4"
x86_64 = "0.14"
noto-sans-mono-bitmap = "0.2" #for our framebuffer writer
volatile = "0.5.1"
spin = "0.9.8"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]